Bug 119021 - Finalized configuration item Calc - Formula - Syntax still editable
Summary: Finalized configuration item Calc - Formula - Syntax still editable
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Gabor Kelemen (Collabora)
URL:
Whiteboard: target:6.4.0
Keywords:
Depends on:
Blocks: Cell-Formula
  Show dependency treegraph
 
Reported: 2018-07-31 16:48 UTC by Gabor Kelemen (Collabora)
Modified: 2019-10-02 13:57 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Example configuration bundle to fix the formula syntax as Calc A1 (1.31 KB, application/x-zip-compressed)
2018-07-31 16:48 UTC, Gabor Kelemen (Collabora)
Details
Example configuration bundle to finalize the settings on the Formula page (1.78 KB, application/zip)
2019-07-11 06:53 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2018-07-31 16:48:03 UTC
Created attachment 143855 [details]
Example configuration bundle to fix the formula syntax as Calc A1

If we finalize the corresponding configuration key of Calc - Formula - Formula syntax the dropdown list is still editable in the Options window.
The value set is not saved, but applied to the UI until restart.
No crash is experienced.

Expected behavior: the Formula syntax dropdown should be disabled.
Comment 1 Xisco Faulí 2018-12-27 09:16:17 UTC
Dear Gabor Kelemen,
This bug has been in ASSIGNED status for more than 3 months without any
activity. Resetting it to NEW.
Please assigned it back to yourself if you're still working on this.
Comment 2 Gabor Kelemen (Collabora) 2019-07-11 06:53:55 UTC
Created attachment 152716 [details]
Example configuration bundle to finalize the settings on the Formula page

I took this a bit further and added lockdown support for all options on the Formula settings page and the Detailed calculation settings window:

https://gerrit.libreoffice.org/#/c/75402/

This was the example bundle I used for testing.
Comment 3 Commit Notification 2019-10-01 19:57:51 UTC
Gabor Kelemen committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dc1f304de78ccf20b3264cbc904d65f78864ec63

tdf#119021 Support lock down settings of Formula tab page

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.