tdf#119021 Support lock down settings of Formula tab page

Change-Id: I3131e8fd98b43cf4073970444589e8fae9553bc1